<resources>
    <string name="app_name">CinemaApp</string>
    <string name="AVAILABLE">AVAILABLE</string>
    <string name="SELECTED">SELECTED</string>
    <string name="RESERVED">RESERVED</string>
    <string name="nav_home">Home</string>
    <string name="nav_user">User</string>
    <string name="nav_Movies">Movies</string>
    <string name="nav_tickets">Tickets</string>
    <string name="createANewHall">CREATE A NEW HALL</string>
    <string name="HallNr_withSemiColon">HallNr:</string>
    <string name="howManyRowsDoesTheHallContain">How many rows does the hall contain?</string>
    <string name="howManySeatsInEachRow">How many seats within each row?</string>
    <string name="save">Save</string>
    <string name="enterMovieTitle">ENTER A MOVIE TITLE</string>
    <string name="search">Search</string>
    <string name="createANewShowing">CREATE A NEW SHOWING</string>
    <string name="movie">Movie</string>
    <string name="title">Title</string>
    <string name="selectMovie">Select movie</string>
    <string name="hall">Hall</string>
    <string name="selectHall">Select hall</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="selectDate">Select date</string>
    <string name="selectTime">Select Time</string>
    <string name="logIn">LOG IN</string>
    <string name="enterUsernameWithDots">Enter username..</string>
    <string name="enterPasswordWithDots">Enter password..</string>
    <string name="createAnAccount">Create an account</string>
    <string name="forgotPassword">Forgot password</string>
    <string name="newMovie">New movie</string>
    <string name="newHall">New hall</string>
    <string name="newShowing">New showing</string>
    <string name="showings">Showings</string>
    <string name="stepPaying">STEP 2: PAYING</string>
    <string name="pay">Pay</string>
    <string name="enterAUserNameWithDots">Enter a username..</string>
    <string name="enterAPasswordWithDots">Enter a password..</string>
    <string name="confirmPasswordWithDots">Confirm password..</string>
    <string name="register">Register</string>
    <string name="stepOneChooseSeats">STEP 1: CHOOSE YOUR SEATS</string>
    <string name="howManySeatsUWant">How many seats do you want?</string>
    <string name="whereDoYouWantToSit">Where do you want to sit?</string>
    <string name="ok">OK</string>
    <string name="fillUsernameFirst">Fill in username first</string>
    <string name="fillPasswordFirst">Fill in password first</string>
    <string name="invalidCredentials">Invalid credentials</string>
    <string name="hallAdded">Hall added</string>
    <string name="chooseAMovieFirst">Choose a movie first</string>
    <string name="movieAdded">Movie added</string>
    <string name="slash">/</string>
    <string name="selectMovieFirst">Select a movie first</string>
    <string name="selectAHallFirst">Select a hall first</string>
    <string name="selectDateFirst">Select a date first</string>
    <string name="selectTimeFirst">Select a time first</string>
    <string name="showingAdded">Showing added</string>
    <string name="hallWithSemiColon">Hall:</string>
    <string name="amountOfSeatsWithSemiColon">Amount of seats:</string>
    <string name="enterUsernameFirst">Enter a username first</string>
    <string name="enterPasswordFirst">Enter a password first</string>
    <string name="confirmPasswordFirst">Confirm password first</string>
    <string name="passwordsDoNotMatch">Passwords do not match</string>
    <string name="userCreated">User created</string>
    <string name="ratingWithSemiColon">Rating:</string>
    <string name="select">Select</string>
    <string name="seatsFirst">seats first</string>
    <string name="totalCapacityWithSemiColon">Total capacity:</string>
    <string name="seatsStillAvailable">seats still available</string>
    <string name="qrCode">QR code</string>
    <string name="hallNrWithSemiColon">HallNr:</string>
    <string name="rowNrWithSemiColon">RowNr:</string>
    <string name="seatNrWithSemiColon">SeatNr:</string>
    <string name="stepDate">STEP 3: SELECT A DATE AND TIME</string>
    <string name="change">Change</string>
    <string name="next">Next</string>
    <string name="stepMovie">STEP 1: SELECT A MOVIE</string>
    <string name="stepSelectHall">STEP 2: SELECT A HALL</string>
    <string name="stepConfirm">STEP 4: CONFIRM SHOWING</string>
    <string name="confirm">Confirm</string>
    <string name="hallNrToLowError">HallNr needs to be above 0</string>
    <string name="hallNrToHighError">Does the cinema have more than 20 halls?</string>
    <string name="director">Director</string>
    <string name="actors">Actors</string>
    <string name="genre">Genre</string>
    <string name="production">Production</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
