<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cinema.avans.cinemaapp.frontEnd.presentation.manager.CreateShowingSelectDateActivity">

    <android.support.constraint.Guideline
        android:id="@+id/createShowingSelectDateGuideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <TextView
        android:id="@+id/createShowingSelectDateStepInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/stepDate"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/createShowingSelectDateDateInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/date"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/createShowingSelectDateGuideline1" />

    <TextView
        android:id="@+id/createShowingSelectDateDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/createShowingSelectDateDateInfo"
        app:layout_constraintStart_toStartOf="@+id/createShowingSelectDateDateInfo"
        app:layout_constraintTop_toBottomOf="@+id/createShowingSelectDateDateInfo"
        tools:text="2018/05/20" />

    <Button
        android:id="@+id/createShowingSelectDateDateChangeButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/change"
        app:layout_constraintEnd_toEndOf="@+id/createShowingSelectDateDateInfo"
        app:layout_constraintStart_toStartOf="@+id/createShowingSelectDateDateInfo"
        app:layout_constraintTop_toBottomOf="@+id/createShowingSelectDateDateText" />

    <android.support.constraint.Guideline
        android:id="@+id/createShowingSelectDateGuideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/createShowingSelectDateTimeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/time"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/createShowingSelectDateGuideline3" />

    <TextView
        android:id="@+id/createShowingSelectDateTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/createShowingSelectDateTimeInfo"
        app:layout_constraintStart_toStartOf="@+id/createShowingSelectDateTimeInfo"
        app:layout_constraintTop_toBottomOf="@+id/createShowingSelectDateTimeInfo"
        tools:text="20:00" />

    <Button
        android:id="@+id/createShowingSelectDateTimeChangeButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/change"
        app:layout_constraintEnd_toEndOf="@+id/createShowingSelectDateTimeInfo"
        app:layout_constraintStart_toStartOf="@+id/createShowingSelectDateTimeInfo"
        app:layout_constraintTop_toBottomOf="@+id/createShowingSelectDateTimeText" />

    <Button
        android:id="@+id/createShowingSelectDateNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
